# snailz

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  dodo.py  mkdocs.yml  pyproject.toml
analysis/: classify.py  summarize.py  utils.py
docs/: 404.html  index.html  objects.inv
docs/anneal/: index.html
docs/assay/: index.html
docs/assays/: index.html
docs/base_mixin/: index.html
docs/clui/: index.html
docs/conduct/: index.html
docs/contributing/: index.html
docs/database/: index.html
docs/db/: index.html
docs/effect/: index.html
docs/effects/: index.html
docs/genomes/: index.html
docs/grid/: index.html
docs/grids/: index.html
docs/images/: index.html
docs/license/: index.html
docs/machine/: index.html
docs/machines/: index.html
docs/main/: index.html
docs/mangle/: index.html
docs/model/: index.html
docs/overall/: index.html
lims/: app.py  main.py
limz/: app.py
notebooks/: visualize.py
pages/: contributing.md  grids.md  index.md  schema.md
params/: assays.json  default_params.json
scripts/: profiling.py  visualize.py
snailz/: effects.py  grid.py  main.py  parameters.py  person.py  sample.py  scenario.py  utils.py
tests/: conftest.py  test_assay.py  test_assays.py  test_clui.py  test_database.py  test_effects.py  test_grid.py  test_grids.py  test_images.py  test_machine.py  test_machines.py  test_main.py  test_parameters.py  test_person.py  test_persons.py  test_rating.py  test_sample.py  test_scenario.py  test_species.py  test_specimen.py  test_specimens.py  test_surveys.py  test_utils.py
(+63 files in other folders)
