[project]
name = "snailz"
description = "Synthetic data generator for snail mutation survey"
keywords = ["open science", "synthetic data"]
readme = "README.md"
authors = [
    { name = "Greg Wilson", email = "gvwilson@third-bit.com" }
]

version = "3.0.0"
requires-python = ">=3.12"
dependencies = [
    "faker",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "ruff"
]

[project.urls]
home = "https://github.com/gvwilson/snailz"

[project.scripts]
snailz = "snailz.main:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["snailz"]
snailz = "snailz.main:main"

[tool.setuptools]
packages = ["snailz"]
